--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -1,9 +1,33 @@
+html, 
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 #background-image {
     background-color: #000;
-    background-image: url(../images/sheetmusicmap.png);
+    background-image: url(../images/sheetmusicmapblue.png);
     background-position: center;
     background-size: cover;
     display: table;
     height: 100%;
     width: 100%;
+}
+
+#login-container * {
+    box-sizing: border-box;
+    color: #fff;
+    font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
+    font-weight: 400;
+    line-height: 1rem;
+}
+
+#login-container {
+    border: 1px white solid;
+    border-radius: 4%;
+    margin: 0 auto;
+    position: relative;
+    max-width: 1024px;
+    width: 80%;
 }
