--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -27,7 +27,7 @@ body {
     margin: 0 auto;
     position: relative;
     max-width: 1024px;
-    width: 80%;
+    width: 85%;
 }
 
 #input-container {
@@ -49,7 +49,79 @@ body {
     border: 0;
     border-bottom: 1px solid #fff;
     display: block;
-    height: 1.8rem;
-    line-height: 1.8rem;
+    height: 1.7rem;
+    line-height: 2rem;
     width: 90%;
 }
+
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color: #fff;
+    font-size: .8rem;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color: #fff;
+   opacity:  1;
+   font-size: .8rem;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color: #fff;
+   opacity:  1;
+   font-size: .8rem;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color: #fff;
+   font-size: .8rem;
+}
+::-ms-input-placeholder { /* Microsoft Edge */
+   color: #fff;
+   font-size: .8rem;
+}
+
+::placeholder { /* Most modern browsers support this now. */
+  color: #fff;
+  font-size: .8rem;
+}
+
+#input-container label {
+    color: #FFFF00;
+    font-size: .8rem;
+    margin-top: 15px;
+}
+
+#input-container button {
+    background-color: transparent;
+    border: 2px solid #fff;
+    border-radius: 125rem;
+    color: #fff;
+    display: block;
+    font-size: 1rem;
+    height: 2.2rem;
+    letter-spacing: .05rem;
+    margin: 1rem auto;
+    text-transform: uppercase;
+    width: 100%;
+}
+
+#input-container button:hover,
+#hide-login:hover,
+#hide-signup:hover {
+    cursor: pointer;
+}
+
+.has-account--text {
+    text-align: center;
+}
+
+.has-account--text span {
+    font-weight: bold;
+    font-size: .85rem;
+}
+
+
+/* 
+#input-container .error-message {
+    background-color: red;
+    color: #fff;
+    font-size: .8rem;
+    padding: 4px;
+} */
